# graphs-api

./: .env.example  .gitignore  README.MD  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/dto/: addressDTO.py  entryDTO.py  fuelDTO.py  generalDTO.py  industryDTO.py  responseDTO.py  truckDTO.py
app/models/: __init__.py  address.py  fuel.py  industry.py  truck.py
app/repositories/: __init__.py  address_repository.py  fuel_repository.py  industry_repository.py  truck_repository.py
app/services/: __init__.py  address_service.py  fuel_service.py  general_service.py  industry_service.py  truck_service.py
app/views/: address_views.py  fuel_views.py  industry_views.py  truck_views.py
migrations/: env.py
migrations/versions/: 6b34b5b20bc6_price.py  7fcfd2ad1898_fix_type.py  81573e47e9f8_init.py
