[tool.poetry]
name = "rotecost"
version = "0.1.0"
description = "A complete API to make decision to sell sugar cane"
authors = ["Pedro Paulo & Gabriel Candido"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
psycopg = "^3.2.1"
opencage = "^3.0.1"
openrouteservice = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
